# NEXUS_SEED-

./: .dockerignore  .gitignore  CONSTITUTIONAL_GOVERNANCE.md  Caddyfile  LICENSE  Licence.md  MISTAKES_LEDGER.md  NEXUS_LOG.txt  README.md  STRATEGIC_DIRECTION.md  Test-1  autonomous_core.js  brain-backup.json  brain_dna_payload.txt  components.json  eslint.config.mjs  hello-world.js  meta_.dockerignore.json  meta_.gitignore.json  meta_CONSTITUTIONAL_GOVERNANCE.json  meta_CONSTITUTIONAL_GOVERNANCE.md.json  meta_Caddyfile.json  meta_Licence.json  meta_Licence.md.json  meta_README.json  meta_eslint.config.mjs.json  meta_next-env.d.json  meta_next.config.json  meta_nexus_core.json  meta_repository.json  next-env.d.ts  nexus_core.js  worklog.md
.zscripts/: build.sh  mini-services-build.sh  mini-services-install.sh  mini-services-start.sh  start.sh
GACR/: AIM.json  AdaptiveSamplingEngine.ts  CMR.json  CMR.schema.json  ECVM.json  ECVM_TIS.json  ES_Schema.json  GTEM.json  HETM.schema.json  MQM.json  MQM_MetricCatalog.json  ModelTierMapping.json  ModelTierMapping.schema.json  TelemetryAggregatorConfig.json  TelemetrySourceSchema.json  VSEC.json
PROTOCOLS/: GSUP.md
agent_specifications/: FIA.md  FVM.md
agents/: TraceAnalysisEngine.js
analysis/: IntegrityCorrelatorModule.js
arbiters/: aia_query_engine.md  delta_computation_module.md
arch_policy/: AIA_Rollback_Configuration.yaml
architectural/: HESE.md  State_Attestation_Layer_SAL.md
components/: KMS_Policy_Engine.ts  StrategicCostIndexer.js  Transient_Vetting_Staging_Unit.yaml
config/: AxiomManager.js  ErrorCodes.js  cpr_tool_config.json  crypto_standards.ts  data_artifact_registry_schema.json  debtPrioritizationConfig.js  dependency_manifest.json  remediation_execution_mapping_v1.yaml  remediation_execution_plan_schema.json  rfse.schema.json  rrp.spec.yaml  runtime_safety_policy.json  (+1 more)
consolidated/18-Test-1-/consolidation-all-repos/consolidated/34-psr-governance-/main-/: DEPLOY_TO_GITHUB.md  README.md  pyproject.toml
db/: custom.db
(+1742 files in other folders)
